--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -47,11 +47,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link crossorigin="anonymous" rel="stylesheet" media="all" href="%PUBLIC_URL%/css/index.css" />
+    <script src="https://kit.fontawesome.com/f170de025b.js" crossorigin="anonymous"></script>
+
     <title>iseplife</title>
   </head>
-  <body>
+  <body class="h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="bg-gray-100"></div>
+    <div id="root" class="h-full"></div>
 
   </body>
 </html>
