--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 
     <title>iseplife</title>
   </head>
-  <body class="h-full">
+  <body class="h-full overflow-hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full"></div>
 
