feat(event): start event display

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="theme-color" content="#3f51b5" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="robots" content="index, follow" />
-    <meta name="author" content="iseplife-production" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5" />
-    <meta name="apple-mobile-web-app-title" content="ISEPLive" />
-    <meta name="google-site-verification" content="7kyZoFPOyTy5z1yHrs312GjgCle7CyDlmILy2uhPfvE" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="theme-color" content="#3f51b5"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="robots" content="index, follow"/>
+    <meta name="author" content="iseplife-production"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5"/>
+    <meta name="apple-mobile-web-app-title" content="ISEPLive"/>
+    <meta name="google-site-verification" content="7kyZoFPOyTy5z1yHrs312GjgCle7CyDlmILy2uhPfvE"/>
     <meta
             name="description"
             content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
@@ -21,39 +21,51 @@
             content="Iseplife, ISEP, Live, Photos, Videos, Gazettes, Association, Reportages, Podcast, Journal, Journaux, Affiches, Informations, Medias, Evénements, Soirées, WEI, Sports"
     />
 
-    <!-- Facebook Metadatas -->
-    <meta property="og:site_name" content="iseplife" />
-    <meta property="og:title" content="iseplife" />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="fr_FR" />
-    <meta property="og:url" content="https://iseplife.fr/" />
-    <meta property="og:image" content="%PUBLIC_URL%/img/iseplive.jpg" />
+    <!-- Facebook Metadata -->
+    <meta property="og:site_name" content="iseplife"/>
+    <meta property="og:title" content="iseplife"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:locale" content="fr_FR"/>
+    <meta property="og:url" content="https://iseplife.fr/"/>
+    <meta property="og:image" content="%PUBLIC_URL%/img/iseplive.jpg"/>
     <meta
             property="og:description"
             content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
     />
-    <!-- Twitter Metadatas -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@ISEPLive" />
-    <meta name="twitter:title" content="ISEPLive" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/img/iseplive.jpg" />
+    <!-- Twitter Metadata -->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@ISEPLive"/>
+    <meta name="twitter:title" content="ISEPLive"/>
+    <meta name="twitter:image" content="%PUBLIC_URL%/img/iseplive.jpg"/>
     <meta
             name="twitter:description"
             content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
     />
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link crossorigin="anonymous" rel="stylesheet" media="all" href="%PUBLIC_URL%/css/index.css" />
+    <!-- Leaflet package -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+          integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+          crossorigin=""
+    />
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+            integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+            crossorigin=""></script>
+
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link crossorigin="anonymous" rel="stylesheet" media="all" href="%PUBLIC_URL%/css/index.css"/>
+
     <script src="https://kit.fontawesome.com/f170de025b.js" crossorigin="anonymous"></script>
 
     <title>iseplife</title>
-  </head>
-  <body class="h-full overflow-hidden">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-full"></div>
+</head>
+<body class="h-full overflow-hidden">
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root" class="h-full"></div>
 
-  </body>
+
+</body>
 </html>
