--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 
     <title>iseplife</title>
 </head>
-<body class="h-full overflow-hidden">
+<body class="h-full">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root" class="h-full"></div>
 
