--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5"/>
         <meta name="apple-mobile-web-app-title" content="ISEPLive"/>
         <meta name="google-site-verification" content="7kyZoFPOyTy5z1yHrs312GjgCle7CyDlmILy2uhPfvE"/>
-        <meta
-                name="description"
-                content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
-        />
-        <meta
-                name="keywords"
-                content="Iseplife, ISEP, Live, Photos, Videos, Gazettes, Association, Reportages, Podcast, Journal, Journaux, Affiches, Informations, Medias, Evénements, Soirées, WEI, Sports"
-        />
+        <meta name="description" content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"/>
+        <meta name="keywords" content="Iseplife, ISEP, Live, Photos, Videos, Gazettes, Association, Reportages, Podcast, Journal, Journaux, Affiches, Informations, Medias, Evénements, Soirées, WEI, Sports"/>
 
         <!-- Facebook Metadata -->
         <meta property="og:site_name" content="iseplife"/>
@@ -28,38 +22,20 @@
         <meta property="og:locale" content="fr_FR"/>
         <meta property="og:url" content="https://iseplife.fr/"/>
         <meta property="og:image" content="%PUBLIC_URL%/img/iseplive.jpg"/>
-        <meta
-                property="og:description"
-                content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
-        />
+        <meta property="og:description" content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"/>
+
         <!-- Twitter Metadata -->
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:site" content="@ISEPLive"/>
         <meta name="twitter:title" content="ISEPLive"/>
         <meta name="twitter:image" content="%PUBLIC_URL%/img/iseplive.jpg"/>
-        <meta
-                name="twitter:description"
-                content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
-        />
-
-        <!-- Leaflet package -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-              integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-              crossorigin=""
-        />
-        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-                integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-                crossorigin=""></script>
-
+        <meta name="twitter:description" content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"/>
 
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-        <link crossorigin="anonymous" rel="stylesheet" media="all" href="%PUBLIC_URL%/css/index.css"/>
-
-        <script src="https://kit.fontawesome.com/f170de025b.js" crossorigin="anonymous"></script>
-
+        <link rel="stylesheet" media="all" href="%PUBLIC_URL%/css/index.css"/>
         <title>iseplife</title>
     </head>
     <body>
