--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,16 @@
         <meta name="mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5"/>
-        <meta name="apple-mobile-web-app-title" content="ISEPLive"/>
+        <meta name="apple-mobile-web-app-title" content="iseplife"/>
         <meta name="google-site-verification" content="7kyZoFPOyTy5z1yHrs312GjgCle7CyDlmILy2uhPfvE"/>
-        <meta name="description" content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"/>
-        <meta name="keywords" content="Iseplife, ISEP, Live, Photos, Videos, Gazettes, Association, Reportages, Podcast, Journal, Journaux, Affiches, Informations, Medias, Evénements, Soirées, WEI, Sports"/>
+        <meta
+            name="description"
+            content="iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
+        />
+        <meta
+            name="keywords"
+            content="iseplife, ISEP, Live, Photos, Videos, Gazettes, Association, Reportages, Podcast, Journal, Journaux, Affiches, Informations, Medias, Evénements, Soirées, WEI, Sports"
+        />
 
         <!-- Facebook Metadata -->
         <meta property="og:site_name" content="iseplife"/>
@@ -22,23 +28,32 @@
         <meta property="og:locale" content="fr_FR"/>
         <meta property="og:url" content="https://iseplife.fr/"/>
         <meta property="og:image" content="%PUBLIC_URL%/img/iseplive.jpg"/>
-        <meta property="og:description" content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"/>
+        <meta
+            property="og:description"
+            content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
+        />
 
         <!-- Twitter Metadata -->
         <meta name="twitter:card" content="summary"/>
-        <meta name="twitter:site" content="@ISEPLive"/>
-        <meta name="twitter:title" content="ISEPLive"/>
+        <meta name="twitter:site" content="@iseplife"/>
+        <meta name="twitter:title" content="iseplife"/>
         <meta name="twitter:image" content="%PUBLIC_URL%/img/iseplive.jpg"/>
-        <meta name="twitter:description" content="Iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"/>
+        <meta
+            name="twitter:description"
+            content="iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
+        />
 
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-              integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-              crossorigin=""/>
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+            integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+            crossorigin=""
+        />
         <title>iseplife</title>
     </head>
     <body>
