--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full">
     <head>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="theme-color" content="#3f51b5"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="robots" content="index, follow"/>
@@ -54,7 +54,7 @@
             integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
             crossorigin=""
         />
-        <title>iseplife</title>
+        <title>IsepLife</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
