--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
-        <title>IsepLife</title>
+        <title>iseplife</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
