--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,11 @@
             content="iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
         />
 
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
+        <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico"/>
+        <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicon.ico"/>
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/apple-touch-icon.png"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+        <meta name="theme-color" content="#818cf8">
 
         <title>iseplife</title>
     </head>
