feat(notification): update favicon & title

--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,14 @@
             content="iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
         />
 
-        <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico"/>
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicon.ico"/>
+        <link rel="icon" id="favicon" href="%PUBLIC_URL%/favicons/favicon.ico"/>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/apple-touch-icon.png"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
         <meta name="theme-color" content="#818cf8">
 
-        <title>iseplife</title>
+        <title>
+            iseplife
+        </title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
