fix(react): fix missing key attribute on multiple children

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <meta name="mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5"/>
-        <meta name="apple-mobile-web-app-title" content="IsepLife"/>
+        <meta name="apple-mobile-web-app-title" content="iseplife"/>
         <meta name="google-site-verification" content="7kyZoFPOyTy5z1yHrs312GjgCle7CyDlmILy2uhPfvE"/>
         <meta
             name="description"
@@ -22,8 +22,8 @@
         />
 
         <!-- Facebook Metadata -->
-        <meta property="og:site_name" content="IsepLife"/>
-        <meta property="og:title" content="IsepLife"/>
+        <meta property="og:site_name" content="iseplife"/>
+        <meta property="og:title" content="iseplife"/>
         <meta property="og:type" content="website"/>
         <meta property="og:locale" content="fr_FR"/>
         <meta property="og:url" content="https://iseplife.fr/"/>
@@ -49,7 +49,7 @@
         <meta name="theme-color" content="#818cf8">
 
         <title>
-            IsepLife
+            iseplife
         </title>
     </head>
     <body>
