refactor(name): revert iseplife name

--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,20 @@
         <meta name="mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-status-bar-style" content="#3f51b5"/>
-        <meta name="apple-mobile-web-app-title" content="iseplife"/>
+        <meta name="apple-mobile-web-app-title" content="IsepLife"/>
         <meta name="google-site-verification" content="7kyZoFPOyTy5z1yHrs312GjgCle7CyDlmILy2uhPfvE"/>
         <meta
             name="description"
-            content="iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
+            content="IsepLife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
         />
         <meta
             name="keywords"
-            content="iseplife, ISEP, Live, Photos, Videos, Gazettes, Association, Reportages, Podcast, Journal, Journaux, Affiches, Informations, Medias, Evénements, Soirées, WEI, Sports"
+            content="IsepLife, ISEP, Live, Photos, Videos, Gazettes, Association, Reportages, Podcast, Journal, Journaux, Affiches, Informations, Medias, Evénements, Soirées, WEI, Sports"
         />
 
         <!-- Facebook Metadata -->
-        <meta property="og:site_name" content="iseplife"/>
-        <meta property="og:title" content="iseplife"/>
+        <meta property="og:site_name" content="IsepLife"/>
+        <meta property="og:title" content="IsepLife"/>
         <meta property="og:type" content="website"/>
         <meta property="og:locale" content="fr_FR"/>
         <meta property="og:url" content="https://iseplife.fr/"/>
@@ -40,7 +40,7 @@
         <meta name="twitter:image" content="%PUBLIC_URL%/img/iseplive.jpg"/>
         <meta
             name="twitter:description"
-            content="iseplife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
+            content="IsepLife est la plateforme associative de l'ISEP, regroupant tout ce qu'il faut savoir sur l'ISEP et sa vie étudiant"
         />
 
         <link rel="icon" id="favicon" href="%PUBLIC_URL%/favicons/favicon.ico"/>
@@ -49,7 +49,7 @@
         <meta name="theme-color" content="#818cf8">
 
         <title>
-            iseplife
+            IsepLife
         </title>
     </head>
     <body>
